--- a/main.css
+++ b/main.css
@@ -2,12 +2,27 @@ html,
 body {
   background: linear-gradient(180deg, #2e2e3a 0%, #0c0c2c 100%);
   font-family: "Poppins", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   padding: 0;
   margin: 0;
   height: 100vh;
   max-width: 100%;
   overflow-x: hidden;
+}
+
+h1 {
+  font-size: 34px;
+  margin: 0;
+}
+
+h2,
+h3 {
+  font-size: 28px;
+}
+
+p {
+  padding: 0;
+  margin: 0;
 }
 
 .container {
@@ -22,4 +37,39 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
+}
+
+.cta {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 20px;
+}
+
+.reset-button {
+  background-color: #ffe817;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  color: #222;
+  font-size: 30px;
+  font-weight: bold;
+  height: 50px;
+}
+
+.reset-button:hover {
+  background-color: #e0e0e0;
+  cursor: pointer;
+}
+
+.score-title {
+  color: aliceblue;
+  padding: 10px 20px;
+}
+
+.your-score {
+  color: #ffe817;
+  padding: 10px;
+  font-size: 50px;
+  margin: 0;
 }
