--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   background: linear-gradient(180deg, #2e2e3a 0%, #0c0c2c 100%);
@@ -8,6 +12,13 @@ body {
   height: 100vh;
   max-width: 100%;
   overflow-x: hidden;
+}
+
+button {
+  font-family: "Poppins", sans-serif;
+  padding: 20px;
+  display: flex;
+  align-items: center;
 }
 
 h1 {
@@ -29,6 +40,7 @@ p {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
+  height: calc(100vh - 30px - 325px);
 }
 
 .header {
@@ -41,7 +53,7 @@ p {
 
 .cta {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding: 20px;
 }
@@ -62,14 +74,70 @@ p {
   cursor: pointer;
 }
 
-.score-title {
+.score {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.score .score-title {
   color: aliceblue;
   padding: 10px 20px;
 }
 
-.your-score {
+.score .your-score {
   color: #ffe817;
   padding: 10px;
   font-size: 50px;
   margin: 0;
+}
+
+.board {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  width: fit-content;
+}
+
+.category-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+  margin: 5px;
+  margin-right: 0;
+  border: 0;
+  color: aliceblue;
+  font-size: 25px;
+  font-weight: bold;
+  background: linear-gradient(180deg, #0120cb 0%, #011ba9 100%);
+  max-width: 220px;
+}
+
+.category-item button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin: 5px;
+  margin-right: 0;
+  width: 98%;
+  border: 0;
+  color: #ffe817;
+  font-size: 50px;
+  font-weight: bold;
+  background: linear-gradient(180deg, #0120cb 0%, #011ba9 100%);
+}
+
+footer {
+  background-color: #0c0c2c;
+  color: aliceblue;
+  padding: 20px;
+  height: 30px;
 }
