--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ body {
   height: 100vh;
   max-width: 100%;
   overflow-x: hidden;
+  position: relative;
 }
 
 button {
@@ -116,7 +117,7 @@ ul {
   font-size: 25px;
   font-weight: bold;
   background: linear-gradient(180deg, #0120cb 0%, #011ba9 100%);
-  max-width: 220px;
+  width: 250px;
 }
 
 .category-item button {
@@ -134,9 +135,132 @@ ul {
   background: linear-gradient(180deg, #0120cb 0%, #011ba9 100%);
 }
 
+#questionModal {
+  display: flex;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  min-height: 300px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(180deg, #2e2e3a 0%, #0c0c2c 100%);
+  border-radius: 10px;
+  z-index: 2;
+}
+
+.close-button {
+  background-color: #ffe817;
+  color: #222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 50px;
+  align-self: flex-end;
+}
+
+.hidden {
+  display: none;
+}
+
+#questionModal .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
+
+#questionModal .content h2 {
+  color: aliceblue;
+  font-size: 35px;
+  margin: 0;
+  text-align: center;
+}
+
+#questionModal .content input[type="text"] {
+  display: block;
+  height: 70px;
+  line-height: 70px;
+  border: 0;
+  text-align: center;
+  border-radius: 5px;
+  width: 100%;
+  margin-top: 20px;
+  font-size: 20px;
+}
+
+#questionModal .content button[type="submit"] {
+  display: block;
+  border: 0;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 20px;
+  background-color: #ffe817;
+  margin-top: 20px;
+  font-weight: 700;
+  width: 100%;
+}
+
+#questionModal .content button[type="submit"]:hover {
+  background-color: #e0e0e0;
+  cursor: pointer;
+}
+
+#questionModal .result-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#questionModal .result-area h3 {
+  color: aliceblue;
+  font-size: 35px;
+  font-weight: 600;
+  margin: 0;
+  text-align: center;
+}
+
+#questionModal .result-area .incorrect-result {
+  color: rgb(195, 11, 11);
+}
+
+#questionModal .result-area .correct-result {
+  color: rgb(11, 195, 11);
+}
+
+#questionModal .correct-answer {
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 1;
+}
+
 footer {
   background-color: #0c0c2c;
   color: aliceblue;
   padding: 20px;
-  height: 30px;
+  display: flex;
+  align-items: center;
 }
