Increasing container width
Increasing container width

--- a/main.css
+++ b/main.css
@@ -38,9 +38,10 @@ p {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 0 20px;
+  height: 100%;
 }
 
 .header {
