--- a/main.css
+++ b/main.css
@@ -98,9 +98,11 @@ p {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  min-height: 700px;
 }
 
-.loading {
+.loading,
+.reset-board-text {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -110,6 +112,7 @@ p {
   opacity: 0.3;
   transition: opacity 0.3s ease-in-out;
   margin-top: 50px;
+  min-height: 700px;
 }
 
 ul {
@@ -267,7 +270,7 @@ ul {
 }
 
 #questionModal .correct-answer {
-  color: white;
+  color: yellow;
   font-size: 30px;
   font-weight: bold;
   font-style: italic;
@@ -275,8 +278,12 @@ ul {
 }
 
 .modal-open {
-  overflow: hidden;
   position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow-y: scroll;
 }
 
 #overlay {
